<resources>
    <string name="app_name">Serial</string>

    <string name="generic_error_snackbar_text">We could not complete your request.</string>
    <string name="no_internet_error_snackbar_text">No internet connection.</string>

    <!-- Main -->
    <string name="main_trending_title_text">Trending</string>
    <string name="main_popular_title_text">Popular</string>
    <string name="main_more_button">More</string>

    <!-- Item Show -->
    <string name="item_show_popularity_label">%</string>

    <!-- View More -->
    <string name="view_more_trending_title_text">Trending</string>
    <string name="view_more_popular_title_text">Popular</string>

    <!-- Show Details -->
    <string name="show_details_popularity_label">User\nRating</string>
    <string name="show_details_overview_title_text">Overview</string>
</resources>
