<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".features.main.MainActivity">

    <data>

        <variable
                name="viewModel"
                type="com.ottoboni.movies.features.main.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/col_main_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ebony_clay"
            android:paddingBottom="32dp">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentScrim="@color/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:scrimAnimationDuration="0"
                    app:scrimVisibleHeightTrigger="@dimen/scrim_trigger_main_toolbar"
                    app:titleEnabled="false">

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_main_featured_shows"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_main_featured_shows"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.5"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_featured_show" />

                <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
                        android:id="@+id/spi_main_featured_shows_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="@dimen/margin_bottom_main_featured_shows_indicator"
                        app:spi_dotColor="@color/white"
                        app:spi_dotSelectedColor="@color/colorAccent" />

                <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/t_main"
                        style="@style/ToolbarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_gravity="top"
                        app:layout_collapseMode="pin"
                        app:title="@string/app_name" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tv_main_trending_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_main_trending_title"
                        android:layout_marginTop="@dimen/margin_top_main_trending_title"
                        android:text="@string/main_trending_title_text"
                        android:textAppearance="@style/MainSectionTitleTextAppearance"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <Button
                        android:id="@+id/b_main_trending_more"
                        style="@style/MainButtonMore"
                        android:onClick="@{ () -> viewModel.onMoreTrendingButtonClicked() }"
                        android:text="@string/main_more_button"
                        app:layout_constraintBaseline_toBaselineOf="@id/tv_main_trending_title"
                        app:layout_constraintBottom_toBottomOf="@id/tv_main_trending_title"
                        app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_main_trending"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_main_trending_rv"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:overScrollMode="always"
                        android:paddingHorizontal="14dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_main_trending_title"
                        tools:itemCount="10"
                        tools:listitem="@layout/item_show" />

                <TextView
                        android:id="@+id/tv_main_popular_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_horizontal_main_popular_title"
                        android:layout_marginTop="@dimen/margin_top_main_popular_title"
                        android:text="@string/main_popular_title_text"
                        android:textAppearance="@style/MainSectionTitleTextAppearance"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rv_main_trending" />

                <Button
                        android:id="@+id/b_main_popular_more"
                        style="@style/MainButtonMore"
                        android:onClick="@{ () -> viewModel.onMorePopularButtonClicked() }"
                        android:text="@string/main_more_button"
                        app:layout_constraintBaseline_toBaselineOf="@id/tv_main_popular_title"
                        app:layout_constraintBottom_toBottomOf="@id/tv_main_popular_title"
                        app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_main_popular"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_main_popular_rv"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:overScrollMode="always"
                        android:paddingHorizontal="14dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_main_popular_title"
                        tools:itemCount="10"
                        tools:listitem="@layout/item_show" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>