<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".features.showdetails.ShowDetailsActivity">

    <data>

        <variable
                name="viewModel"
                type="com.ottoboni.movies.features.showdetails.ShowDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ebony_clay">

        <ImageView
                android:id="@+id/iv_show_details_header"
                error="@{ @drawable/icon_backdrop_error }"
                imageUrl="@{ viewModel.backdropUrl }"
                placeholder="@{ @drawable/icon_backdrop_placeholder }"
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_show_details_header"
                android:foreground="@color/bunker_50"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/icon_backdrop_placeholder" />

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/t_show_details"
                style="@style/ToolbarStyle"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                android:background="@drawable/show_details_toolbar_shape_background"
                app:layout_collapseMode="pin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@{ viewModel.name }"
                tools:title="Pokémon" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g_show_details_start_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/constraint_guid_begin_show_details_start_margin" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g_show_details_end_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/constraint_guid_end_show_details_end_margin" />

        <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_show_details_poster"
                error="@{ @drawable/icon_poster_error }"
                imageUrl="@{ viewModel.posterUrl }"
                placeholder="@{ @drawable/icon_poster_placeholder }"
                android:layout_width="@dimen/width_show_details_poster"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_show_details_header"
                app:layout_constraintDimensionRatio="2:3"
                app:layout_constraintStart_toEndOf="@id/g_show_details_start_margin"
                app:layout_constraintTop_toBottomOf="@id/iv_show_details_header"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceShowDetailsPoster"
                tools:srcCompat="@drawable/icon_poster_placeholder" />

        <androidx.cardview.widget.CardView
                android:id="@+id/cv_show_details_popularity"
                android:layout_width="@dimen/size_item_show_popularity"
                android:layout_height="@dimen/size_item_show_popularity"
                android:layout_marginStart="@dimen/margin_start_show_details_popularity"
                android:layout_marginEnd="@dimen/margin_end_item_show_popularity"
                android:layout_marginBottom="@dimen/margin_bottom_show_details_popularity"
                app:cardCornerRadius="@dimen/radius_item_show_popularity"
                app:layout_constraintBottom_toBottomOf="@id/iv_show_details_header"
                app:layout_constraintStart_toEndOf="@id/iv_show_details_poster">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.timqi.sectorprogressview.ColorfulRingProgressView
                        android:id="@+id/pb_show_details_popularity"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:bgColor="@color/white"
                        app:fgColorEnd="@color/colorPrimaryDark"
                        app:fgColorStart="@color/colorAccent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:percent="@{ viewModel.popularityValue }"
                        app:strokeWidth="4dp" />

                <TextView
                        android:id="@+id/tv_show_details_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@{ viewModel.popularityText }"
                        android:textSize="@dimen/text_size_item_show_popularity"
                        app:layout_constraintBottom_toBottomOf="@id/pb_show_details_popularity"
                        app:layout_constraintEnd_toEndOf="@id/pb_show_details_popularity"
                        app:layout_constraintHorizontal_bias="0.45"
                        app:layout_constraintStart_toStartOf="@id/pb_show_details_popularity"
                        app:layout_constraintTop_toTopOf="@id/pb_show_details_popularity"
                        tools:ignore="SmallSp"
                        tools:text="68" />

                <TextView
                        android:id="@+id/tv_item_show_popularity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/item_show_popularity_label"
                        android:textSize="@dimen/text_size_item_show_popularity_label"
                        app:layout_constraintBaseline_toBaselineOf="@id/tv_show_details_popularity"
                        app:layout_constraintStart_toEndOf="@id/tv_show_details_popularity"
                        app:layout_constraintTop_toTopOf="@id/tv_show_details_popularity"
                        tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/tv_show_details_popularity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_show_details_popularity_label"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/show_details_popularity_label"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_show_details_popularity_label"
                app:layout_constraintBottom_toBottomOf="@id/cv_show_details_popularity"
                app:layout_constraintStart_toEndOf="@id/cv_show_details_popularity"
                app:layout_constraintTop_toTopOf="@id/cv_show_details_popularity" />

        <TextView
                android:id="@+id/tv_show_details_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_show_details_genres"
                android:layout_marginTop="@dimen/margin_top_show_details_genres"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="4"
                android:text="@{ viewModel.genres }"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_show_details_genres"
                app:layout_constraintEnd_toStartOf="@id/g_show_details_end_margin"
                app:layout_constraintStart_toEndOf="@id/iv_show_details_poster"
                app:layout_constraintTop_toBottomOf="@id/iv_show_details_header"
                tools:text="Animation, Action &amp; Adventure, Sci-Fi &amp; Fantasy" />

        <TextView
                android:id="@+id/tv_show_details_overview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_details_overview_title"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/show_details_overview_title_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_show_details_overview_title"
                app:layout_constraintEnd_toStartOf="@id/g_show_details_end_margin"
                app:layout_constraintStart_toEndOf="@id/g_show_details_start_margin"
                app:layout_constraintTop_toBottomOf="@id/iv_show_details_poster" />

        <TextView
                android:id="@+id/tv_show_details_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_show_details_overview"
                android:fontFamily="sans-serif-light"
                android:justificationMode="inter_word"
                android:text="@{ viewModel.overview }"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_show_details_overview"
                app:layout_constraintEnd_toStartOf="@id/g_show_details_end_margin"
                app:layout_constraintStart_toEndOf="@id/g_show_details_start_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_show_details_overview_title"
                tools:text="Join Ash Ketchum, accompanied by his partner Pikachu, as he travels through many regions, meets new friends and faces new challenges on his quest to become a Pokémon Master." />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>